lab1/Test/L1-A-7-14.cmm
float ;
int AR7OJ5eXM ( ) {
  int It8xmwDVxYk3 = IUOy || PQjLZ == mvCELW5Dkyz3p4G53yKj 
    + Y0UlKWAb1JmrpYAVwbvX / _DUiqX249WUU69 [ nUVzSjh_hZMXZdj 
    = Pes4 && rB75LsDwor < OTFTGaY - RJqoE ( wCGJ > qh 
    * RzGA ( hcCwW_cWOf , Z8q , Kif = DbMmzauJJjXmp5srb 
    || glIoVcmhpIM != gNU - b ( - ( vxlij / 1022049046.233981768 
    ) <= ! ! 774942424 ) ) ) ^] * ! - - c7Uzpo >= JBwCIc 
    ( ) . bFCaRoqk5S ;
}
struct FcbdhK OXP9yx9Lid [ 763935774 ] , S 

;
int ;
int ;
int tEFCM01KTY6 ( struct MuiafL6xCKDDpKsgP S2ziSv109JyUE 
  ^, struct {
  struct D2ssmg1KsfWiW_z9fys O9GgXCpLtCdFk0rxH2W , 
    MTXWpTOzU9tMmtE , O94xBWPgi_TVY7 ;
}Q55qD ) {
  return ZCF ;
}
struct R9VGW2Z {
};
int ;
int kPc3QuN7d ( ) {
}
int UXPmLTLJrL_g7i ( ) {
  if ( W4oAHS47tSTuv )   while `( PFPYjLxqNRiqq1Wa 
    )   if ( SfA )   sr5w3wITo6upV ;
else {
  }


}
int ;
int ;
int ;
int ;
int :Bt_jlNGsmQ4lp ( ) {
  _iyL4leYjd55fM ;
  PjBhtA ;
  LO81y9 ;
  _ ;
  if ( utiewPnpPhARbCg )   tTQjylTC ;
else   if ( S3VmTBOb )   jq0ui ;


  k7FCgNCEc ;
}
int a4 ( ) {
  if ( n7WuG_Xn1ZAwRWBUt )   EF ;
else   H8MHMb5M ;

}
int ;
int ;
int ;
